--- a/jscode/index.html
+++ b/jscode/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>first js code</title>
+    <title>first js</title>
 </head>
 <body>
     <script scr="script.js"></script>
